--- a/src/components/activities/activity.css
+++ b/src/components/activities/activity.css
@@ -29,7 +29,12 @@ body {
   animation: fadeIn 0.5s ease-in-out;
   width: 50vw;
   height: 72vh;
+
+  @media (max-width:700px) {
+    width: 88vw;
+  }
 }
+
 
 .modal-content h2 {
   font-family: 'Poppins', sans-serif;
