--- a/src/components/tabletennis.css
+++ b/src/components/tabletennis.css
@@ -22,27 +22,17 @@ body {
 }
 
 /* Main container to center the card */
-.tabelcon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    /* Ensures content is vertically centered */
-    padding: 20px;
-    background-image: url("https://i.ibb.co/NpvwzZx/art-graffiti-wall-table-tennis.jpg");
-    /* Replace with a Table Tennis image */
-    background-size: cover;
-}
+
 
 /* Heading styling */
 header {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 16px;
 }
 
 .title {
     font-size: 3.3rem;
-    margin-top: 4rem;
+    margin-top: 1rem;
     font-weight: bold;
     color: #ffc53e;
     text-transform: uppercase;
@@ -93,4 +83,10 @@ section strong {
     section p {
         font-size: 1rem;
     }
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
