--- a/src/components/genai.css
+++ b/src/components/genai.css
@@ -16,12 +16,14 @@
     padding: 20px;
     overflow: auto;
   }
-  
+  .ramp-back-button-container img{
+    width: 40px;
+  }
   .genai-header {
     background-color: #1e2a47;
     color: #fff;
-    padding: 20px 40px;
-    width: 100%;
+    padding: 40px 8px;
+    width: 90%;
     text-align: center;
     font-size: 2.5rem;
     font-weight: bold;
@@ -55,7 +57,7 @@
     margin-bottom: 20px;
     text-transform: uppercase;
     font-weight: 600;
-    border-bottom: 2px solid #ff6f61;
+    /* border-bottom: 2px solid #ff6f61; */
     padding-bottom: 5px;
   }
   
@@ -78,23 +80,22 @@
     content: '';
     width: 20px;
     height: 20px;
-    background-color: #ff6f61;
+    /* background-color: #ff6f61; */
     clip-path: polygon(100% 50%, 0 100%, 100% 0);
     margin-right: 15px;
   }
   
-  .ramp-back-button-container {
+  /* .ramp-back-button-container {
     position: relative;
     padding-top: 30px;
     display: flex;
     justify-content: flex-start;
-    margin-top: -20px; /* Pull the back button slightly up */
+    margin-top: -20px; 
     width: 100%;
     padding-left: 20px;
 }
 
 .ramp-back-button {
-    background-color: #ff6f61;
     color: #fff;
     text-decoration: none;
     padding: 10px 20px;
@@ -104,9 +105,8 @@
 }
 
 .ramp-back-button:hover {
-    background-color: #f85f44;
     transform: scale(1.1);
-}
+} */
   
   .genai-footer {
     text-align: center;
