--- a/src/components/skit.css
+++ b/src/components/skit.css
@@ -83,13 +83,13 @@
   clip-path: polygon(100% 50%, 0 100%, 100% 0);
   margin-right: 15px;
 }
-
+/* 
 .ramp-back-button-container {
     position: relative;
     padding-top: 30px;
     display: flex;
     justify-content: flex-start;
-    margin-top: -20px; /* Pull the back button slightly up */
+    margin-top: -20px;
     width: 100%;
     padding-left: 20px;
 }
@@ -107,7 +107,7 @@
 .ramp-back-button:hover {
     background-color: #f85f44;
     transform: scale(1.1);
-}
+} */
 @media screen and (max-width: 768px) {
   .skit-header h1 {
     font-size: 2rem;
